--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=6fc52a04c7d3a52fe61574e9df2f63ab21b188c8941c915f29ffa2a295028408" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=8f2ef3616dc8597c1f805909923d55b619899a732541abb520c3d7a486e0877d" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-orgb3230e4" class="outline-2 latest-section">
-<h2 id="orgb3230e4"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-orgb3230e4">
+<section id="outline-container-org089ba4f" class="outline-2 latest-section">
+<h2 id="org089ba4f"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org089ba4f">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">02 Dec 2024</span></span>  <a href="posts/physics/hopf_fiberation/index.html">Hopf Fibrations</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">12 Jun 2024</span></span>  <a href="posts/philosophy/consious_realism/index.html">Modern Idealists</a><br></li>
