--- a/tutorials/polyglot/index.html
+++ b/tutorials/polyglot/index.html
@@ -46,7 +46,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgee480f9">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
+<li><a href="#org56ec5cf">A vanilla implementation of Machine Translation (seq2seq) using transformers</a></li>
 </ul>
 </div>
 </nav>
@@ -67,9 +67,9 @@
 </script>
 
 
-<section id="outline-container-orgee480f9" class="outline-2">
-<h2 id="orgee480f9">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
-<div class="outline-text-2" id="text-orgee480f9">
+<section id="outline-container-org56ec5cf" class="outline-2">
+<h2 id="org56ec5cf">A vanilla implementation of Machine Translation (seq2seq) using transformers</h2>
+<div class="outline-text-2" id="text-org56ec5cf">
 <p>
 <a href="https://github.com/shrisharaob/polyglot">GitHub Repo</a><br>
 </p>
