deploy: 62b4f6ddc9cfd82d2a7e22e0d7b411332083087c

--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=8f2ef3616dc8597c1f805909923d55b619899a732541abb520c3d7a486e0877d" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=4a47309d6aba0ecf725078b5e8c654ab45d9ebd47861df60f14efedd0183e5fd" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-orgf930c67" class="outline-2">
-<h2 id="orgf930c67">Introduction</h2>
-<div class="outline-text-2" id="text-orgf930c67">
+<section id="outline-container-org9500339" class="outline-2">
+<h2 id="org9500339">Introduction</h2>
+<div class="outline-text-2" id="text-org9500339">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
