--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd4e267c">Introduction</a></li>
-<li><a href="#orged0ecbb">Understanding Stable Diffusion</a></li>
-<li><a href="#orgbfbafca">How Stable Diffusion Works</a></li>
-<li><a href="#org7971f68">Applications of Stable Diffusion</a></li>
-<li><a href="#org9d51577">Conclusion</a></li>
-<li><a href="#orge53b857">Code</a></li>
+<li><a href="#org9fc5347">Introduction</a></li>
+<li><a href="#org173557a">Understanding Stable Diffusion</a></li>
+<li><a href="#org2566623">How Stable Diffusion Works</a></li>
+<li><a href="#orgb5722d2">Applications of Stable Diffusion</a></li>
+<li><a href="#org70645e4">Conclusion</a></li>
+<li><a href="#org4d3c42a">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-orgd4e267c" class="outline-2">
-<h2 id="orgd4e267c">Introduction</h2>
-<div class="outline-text-2" id="text-orgd4e267c">
+<section id="outline-container-org9fc5347" class="outline-2">
+<h2 id="org9fc5347">Introduction</h2>
+<div class="outline-text-2" id="text-org9fc5347">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-orged0ecbb" class="outline-2">
-<h2 id="orged0ecbb">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orged0ecbb">
+<section id="outline-container-org173557a" class="outline-2">
+<h2 id="org173557a">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org173557a">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-orgbfbafca" class="outline-2">
-<h2 id="orgbfbafca">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-orgbfbafca">
+<section id="outline-container-org2566623" class="outline-2">
+<h2 id="org2566623">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org2566623">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-org7971f68" class="outline-2">
-<h2 id="org7971f68">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org7971f68">
+<section id="outline-container-orgb5722d2" class="outline-2">
+<h2 id="orgb5722d2">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgb5722d2">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org9d51577" class="outline-2">
-<h2 id="org9d51577">Conclusion</h2>
-<div class="outline-text-2" id="text-org9d51577">
+<section id="outline-container-org70645e4" class="outline-2">
+<h2 id="org70645e4">Conclusion</h2>
+<div class="outline-text-2" id="text-org70645e4">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-orge53b857" class="outline-2">
-<h2 id="orge53b857">Code</h2>
-<div class="outline-text-2" id="text-orge53b857">
+<section id="outline-container-org4d3c42a" class="outline-2">
+<h2 id="org4d3c42a">Code</h2>
+<div class="outline-text-2" id="text-org4d3c42a">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
