deploy: bec46a16ba97a7155891843c323a3e778edec0a3

--- a/README.html
+++ b/README.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=4a47309d6aba0ecf725078b5e8c654ab45d9ebd47861df60f14efedd0183e5fd" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=a26d1ec203093aa7333d3a99f7a0a387a845d5435ae4509a31222ff5b8f8165c" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -82,9 +82,9 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<section id="outline-container-org9500339" class="outline-2">
-<h2 id="org9500339">Introduction</h2>
-<div class="outline-text-2" id="text-org9500339">
+<section id="outline-container-org21052d1" class="outline-2">
+<h2 id="org21052d1">Introduction</h2>
+<div class="outline-text-2" id="text-org21052d1">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a>.
 </p>
