--- a/tutorials/stable_difussion/index.html
+++ b/tutorials/stable_difussion/index.html
@@ -46,19 +46,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org9fc5347">Introduction</a></li>
-<li><a href="#org173557a">Understanding Stable Diffusion</a></li>
-<li><a href="#org2566623">How Stable Diffusion Works</a></li>
-<li><a href="#orgb5722d2">Applications of Stable Diffusion</a></li>
-<li><a href="#org70645e4">Conclusion</a></li>
-<li><a href="#org4d3c42a">Code</a></li>
+<li><a href="#orge82063a">Introduction</a></li>
+<li><a href="#orgc5a3a2b">Understanding Stable Diffusion</a></li>
+<li><a href="#org5e33862">How Stable Diffusion Works</a></li>
+<li><a href="#org64c8bec">Applications of Stable Diffusion</a></li>
+<li><a href="#orge7163cb">Conclusion</a></li>
+<li><a href="#orge92c273">Code</a></li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org9fc5347" class="outline-2">
-<h2 id="org9fc5347">Introduction</h2>
-<div class="outline-text-2" id="text-org9fc5347">
+<section id="outline-container-orge82063a" class="outline-2">
+<h2 id="orge82063a">Introduction</h2>
+<div class="outline-text-2" id="text-orge82063a">
 <p>
 In the world of computer graphics and digital art, algorithms play a significant
 role in generating visually appealing images. One such algorithm that has gained
@@ -69,9 +69,9 @@ applications.
 </div>
 </section>
 
-<section id="outline-container-org173557a" class="outline-2">
-<h2 id="org173557a">Understanding Stable Diffusion</h2>
-<div class="outline-text-2" id="text-org173557a">
+<section id="outline-container-orgc5a3a2b" class="outline-2">
+<h2 id="orgc5a3a2b">Understanding Stable Diffusion</h2>
+<div class="outline-text-2" id="text-orgc5a3a2b">
 <p>
 Stable Diffusion is an algorithm used for image generation based on the
 principles of reaction-diffusion systems. It&rsquo;s particularly interesting because
@@ -89,9 +89,9 @@ process mathematically, resulting in visually stunning images.
 </div>
 </section>
 
-<section id="outline-container-org2566623" class="outline-2">
-<h2 id="org2566623">How Stable Diffusion Works</h2>
-<div class="outline-text-2" id="text-org2566623">
+<section id="outline-container-org5e33862" class="outline-2">
+<h2 id="org5e33862">How Stable Diffusion Works</h2>
+<div class="outline-text-2" id="text-org5e33862">
 <p>
 The algorithm operates on a grid representing the image canvas. Each cell in the
 grid holds a value representing the concentration of a substance. Over multiple
@@ -120,9 +120,9 @@ patterns or text, users can generate a wide range of visually intriguing images.
 </div>
 </section>
 
-<section id="outline-container-orgb5722d2" class="outline-2">
-<h2 id="orgb5722d2">Applications of Stable Diffusion</h2>
-<div class="outline-text-2" id="text-orgb5722d2">
+<section id="outline-container-org64c8bec" class="outline-2">
+<h2 id="org64c8bec">Applications of Stable Diffusion</h2>
+<div class="outline-text-2" id="text-org64c8bec">
 <p>
 Stable Diffusion finds applications in various domains, including:
 </p>
@@ -142,9 +142,9 @@ formation in a visual and interactive manner.</li>
 </div>
 </section>
 
-<section id="outline-container-org70645e4" class="outline-2">
-<h2 id="org70645e4">Conclusion</h2>
-<div class="outline-text-2" id="text-org70645e4">
+<section id="outline-container-orge7163cb" class="outline-2">
+<h2 id="orge7163cb">Conclusion</h2>
+<div class="outline-text-2" id="text-orge7163cb">
 <p>
 Stable Diffusion is a powerful algorithm that offers a creative avenue for
 generating captivating images. Its ability to simulate complex patterns and
@@ -167,9 +167,9 @@ today?
 </div>
 </section>
 
-<section id="outline-container-org4d3c42a" class="outline-2">
-<h2 id="org4d3c42a">Code</h2>
-<div class="outline-text-2" id="text-org4d3c42a">
+<section id="outline-container-orge92c273" class="outline-2">
+<h2 id="orge92c273">Code</h2>
+<div class="outline-text-2" id="text-orge92c273">
 <div class="org-src-container">
 <pre class="src src-shell">pip install stabledifussion
 </pre>
