--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <meta description='The blog of Shrisha Rao'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Shrisha Rao' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=f30476a086ab24f12e23a56effb63295e34f03220c6290406e4869f7ad422849'/>
-<link rel="stylesheet" href="css/site.css?v=4a47309d6aba0ecf725078b5e8c654ab45d9ebd47861df60f14efedd0183e5fd" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=a26d1ec203093aa7333d3a99f7a0a387a845d5435ae4509a31222ff5b8f8165c" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
@@ -112,9 +112,9 @@ imagination. Prepare to be captivated, <br> inspired, and perhaps even slightly 
 as we embark upon this exhilarating journey.
 </p>
 
-<section id="outline-container-org9d54bcc" class="outline-2 latest-section">
-<h2 id="org9d54bcc"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
-<div class="outline-text-2" id="text-org9d54bcc">
+<section id="outline-container-org8e2b74f" class="outline-2 latest-section">
+<h2 id="org8e2b74f"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest Posts</h2>
+<div class="outline-text-2" id="text-org8e2b74f">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">02 Dec 2024</span></span>  <a href="posts/physics/hopf_fiberation/index.html">Hopf Fibrations</a><br></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">12 Jun 2024</span></span>  <a href="posts/philosophy/consious_realism/index.html">Modern Idealists</a><br></li>
